Changed the color filter to a red check mark instead, updated color of UI and title name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Chzonk</string>
+    <string name="app_name">RedDoor Comic Viewer</string>
     <string name="title_activity_main">RedDoor Comic Viewer</string>
-    <string name="browse_title"><![CDATA[Chzonk]]></string>
+    <string name="browse_title"><![CDATA[RedDoor Comic Viewer]]></string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Personal Settings</string>
 
